--- a/finalModule/finalModule/src/main/resources/templates/admin/category/listcategory.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/category/listcategory.html
@@ -29,7 +29,9 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-                <a href="/Admin/category-manager/create" class="btn-create btn btn-success">Thêm Danh Mục</a>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addBrandModal">
+                    Thêm Thương Hiệu
+                </button>
             </div>
             <hr style="border: 1px solid #333333; margin-top: 8px;">
         </div>
@@ -38,6 +40,7 @@
             <tr>
                 <th>ID</th>
                 <th>Tên Danh Mục</th>
+                <th>Mô tả </th>
                 <th>Ngày Tạo</th>
                 <th>Cập Nhật Lần Cuối</th>
                 <th>Thao tác</th>
@@ -47,6 +50,7 @@
             <tr th:each="category : ${categories}">
                 <td th:text="${category.categoryID}"></td>
                 <td th:text="${category.name}"></td>
+                <td th:text="${category.description}"></td>
                 <td th:text="${#temporals.format(category.createAt, 'dd-MM-yyyy HH:mm')}"></td>
                 <td th:text="${#temporals.format(category.updateAt, 'dd-MM-yyyy HH:mm')}"></td>
                 <td>
@@ -59,8 +63,41 @@
             </tbody>
         </table>
     </div>
+    <!-- Modal Thêm Thương Hiệu -->
+    <div class="modal fade" id="addBrandModal" tabindex="-1" aria-labelledby="addBrandModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addBrandModalLabel">Thêm category</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="addBrandForm" th:action="@{/Admin/add-categoryManager}" method="post" th:object="${categorys}">
+                        <!-- Tên thương hiệu -->
+                        <div class="mb-3">
+                            <label class="form-label">Tên </label>
+                            <input type="text" class="form-control" th:field="*{name}" required>
+<!--                            <small class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></small>-->
+                        </div>
+                        <!-- Mô tả -->
+                        <div class="mb-3">
+                            <label class="form-label">Mô tả</label>
+                            <input type="text" class="form-control" th:field="*{description}" required>
+<!--                            <small class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}" style="color: red"></small>-->
+                        </div>
+
+                        <button type="submit" class="btn btn-primary">Lưu</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
