--- a/finalModule/finalModule/src/main/resources/templates/admin/customer/customer-edit.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/customer/customer-edit.html
@@ -27,26 +27,31 @@
                         <form th:action="@{/customers/update}" method="POST" th:object="${customerDTO}" class="needs-validation" novalidate>
                             <input type="hidden" id="id" name="id" th:field="*{id}">
                             <div class="mb-3">
-                                <label for="fullName" class="form-label">Họ và Tên</label>
+                                <label for="fullName" class="form-label">Họ và Tên :</label>
                                 <input type="text" class="form-control" id="fullName" name="fullName" th:field="*{fullName}" required>
                                 <p class="error" th:if="${#fields.hasErrors('fullName')}" th:text="${#fields.errors('fullName')[0]}"></p>
                             </div>
 
                             <div class="mb-3">
-                                <label for="phone" class="form-label">Số điện thoại</label>
+                                <label for="phone" class="form-label">Số điện thoại :</label>
                                 <input type="text" class="form-control" id="phone" name="phone" th:field="*{phone}" required>
                                 <p class="error" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></p>
                                 <p class="error" th:if="${error != null}" th:text="${error}"></p>
                             </div>
                             <div class="mb-3">
-                                <label for="address" class="form-label">Địa chỉ</label>
+                                <label for="address" class="form-label">Địa chỉ :</label>
                                 <input type="text" class="form-control" id="address" name="address" th:field="*{address}" required>
                                 <p class="error" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></p>
                             </div>
                             <div class="mb-3">
-                                <label for="birthDate" class="form-label">Ngày Sinh</label>
+                                <label for="birthDate" class="form-label">Ngày Sinh :</label>
                                 <input type="date" class="form-control" id="birthDate" name="birthDate" th:field="*{birthDate}" required>
                                 <p class="error" th:if="${#fields.hasErrors('birthDate')}" th:errors="*{birthDate}"></p>
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email :</label>
+                                <input type="text" class="form-control" id="email" name="email" th:field="*{email}" required>
+                                <p class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
                             </div>
                             <div class="d-grid">
                                 <button type="submit" class="btn btn-danger btn-lg">Cập nhật</button>
