--- a/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
@@ -126,49 +126,49 @@
         <button type="button" id="deleteBtn" class="btn btn-danger mt-2" style="display: none;" onclick="disableSelectedEmployees()">Xóa nhân viên</button>
         <button type="button" id="activateBtn" class="btn btn-success mt-2" style="display: none;" onclick="activateSelectedEmployees()">Kích hoạt nhân viên</button>
 
-        <!-- Phân trang -->
-        <nav aria-label="Page navigation" class="mt-3">
-            <ul class="pagination justify-content-end align-items-center">
+<!--        &lt;!&ndash; Phân trang &ndash;&gt;-->
+<!--        <nav aria-label="Page navigation" class="mt-3">-->
+<!--            <ul class="pagination justify-content-end align-items-center">-->
 
-                <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">
-                    <a class="page-link"
-                       th:href="@{/Admin/employee-manager(page=1, searchField=${field}, searchInput=${filterKeyWord})}"
-                       aria-label="First">
-                        <span aria-hidden="true">&laquo;&laquo;</span>
-                    </a>
-                </li>
+<!--                <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">-->
+<!--                    <a class="page-link"-->
+<!--                       th:href="@{/Admin/employee-manager(page=1, searchField=${field}, searchInput=${filterKeyWord})}"-->
+<!--                       aria-label="First">-->
+<!--                        <span aria-hidden="true">&laquo;&laquo;</span>-->
+<!--                    </a>-->
+<!--                </li>-->
 
-                <li class="page-item" th:classappend="${employees.first} ? 'disabled'">
-                    <a class="page-link" th:href="@{/Admin/employee-manager(page=${employees.number}, searchField=${field}, searchInput=${filterKeyWord})}"
-                       aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
+<!--                <li class="page-item" th:classappend="${employees.first} ? 'disabled'">-->
+<!--                    <a class="page-link" th:href="@{/Admin/employee-manager(page=${employees.number}, searchField=${field}, searchInput=${filterKeyWord})}"-->
+<!--                       aria-label="Previous">-->
+<!--                        <span aria-hidden="true">&laquo;</span>-->
+<!--                    </a>-->
+<!--                </li>-->
 
-                <li class="page-item disabled">
-                  <span class="page-link">
-                    Trang <span th:text="${employees.number + 1}"></span> / <span th:text="${employees.totalPages}"></span>
-                  </span>
-                </li>
+<!--                <li class="page-item disabled">-->
+<!--                  <span class="page-link">-->
+<!--                    Trang <span th:text="${employees.number + 1}"></span> / <span th:text="${employees.totalPages}"></span>-->
+<!--                  </span>-->
+<!--                </li>-->
 
-                <li class="page-item" th:classappend="${employees.last} ? 'disabled'">
-                    <a class="page-link" th:href="@{/Admin/employee-manager(page=${employees.number + 2}, searchField=${field}, searchInput=${filterKeyWord})}"
-                       aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
+<!--                <li class="page-item" th:classappend="${employees.last} ? 'disabled'">-->
+<!--                    <a class="page-link" th:href="@{/Admin/employee-manager(page=${employees.number + 2}, searchField=${field}, searchInput=${filterKeyWord})}"-->
+<!--                       aria-label="Next">-->
+<!--                        <span aria-hidden="true">&raquo;</span>-->
+<!--                    </a>-->
+<!--                </li>-->
 
-                <li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">
-                    <a class="page-link"
-                       th:href="@{/Admin/employee-manager(page=${totalPages}, searchField=${field}, searchInput=${filterKeyWord})}"
-                       aria-label="Last">
-                        <span aria-hidden="true">&raquo;&raquo;</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+<!--                <li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">-->
+<!--                    <a class="page-link"-->
+<!--                       th:href="@{/Admin/employee-manager(page=${totalPages}, searchField=${field}, searchInput=${filterKeyWord})}"-->
+<!--                       aria-label="Last">-->
+<!--                        <span aria-hidden="true">&raquo;&raquo;</span>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </nav>-->
 
-    </div>
+<!--    </div>-->
 
     <!-- Modal Thêm Nhân Viên -->
     <div class="modal fade" id="addEmployeeModal" tabindex="-1" aria-labelledby="addEmployeeModalLabel" aria-hidden="true">
@@ -291,7 +291,6 @@
                 </div>
                 <div class="modal-body">
                     <form id="editEmployeeForm" th:action="@{/Admin/employee-manager/edit}" method="POST">
-                        <!-- Truyền các tham số hiện tại để giữ trạng thái khi quay lại -->
                         <input type="hidden" name="page" th:value="${currentPage}">
                         <input type="hidden" name="size" value="3">
                         <input type="hidden" name="searchField" th:value="${field}">
